--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -116,3 +116,12 @@ background-color: inherit;
  z-index: 1;
  
 }
+.add-pokemon-form{
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: calc(80vw - 10px);
+    height: 40vh;
+    padding: 5px;
+}
