--- a/assets/css/battle.css
+++ b/assets/css/battle.css
@@ -230,10 +230,14 @@ border: 5px solid gold;
     height: 100px;
     overflow-y: scroll;
 }
-.card-body p {
+.card-body > * {
     margin: 5px 3px;
     font-size: 14px;
 
+}
+.effectiveness > img {
+    width: 15px;
+    height: 15px;
 }
 
 .retreat-cost {
