--- a/assets/css/battle.css
+++ b/assets/css/battle.css
@@ -230,10 +230,14 @@ border: 5px solid gold;
     height: 100px;
     overflow-y: scroll;
 }
-.card-body p {
+.card-body > * {
     margin: 5px 3px;
     font-size: 14px;
 
+}
+.effectiveness > img {
+    width: 15px;
+    height: 15px;
 }
 
 .retreat-cost {
@@ -279,32 +283,4 @@ border: 5px solid gold;
     align-items: center;
     flex-wrap: wrap;
     
-}
-
-.choose-pokemon-cont{
-   width: 90vw; 
-   display: flex;
-   flex-direction: column;
-   background-color: white;
-}
-.choose-pokemon-cont > .pokemon{
-width: 100%;
-padding: 8px 5px;
-display: flex;
-justify-content: space-between;
-align-items: center;
-border: none;
-background-color: white;
-}
-.choose-pokemon-cont > .pokemon:active{
- filter: brightness(90%);
-}
-.choose-pokemon-cont > .pokemon:disabled{
- filter: brightness(30%);
-}
-.choose-pokemon-cont > .pokemon > .level{
- background-color: royalblue;
- color: white;
- padding: 3px;
- border-radius: 3px;
 }
