--- a/assets/css/battle.css
+++ b/assets/css/battle.css
@@ -1,7 +1,7 @@
 .container {
-    height: 100vh;
+  height: 100vh;
 }
-.battle-prompt-popup{
+.battle-prompt-popup {
   width: calc( 80vw - 40px);
   padding: 20px;
   position: fixed;
@@ -16,12 +16,12 @@
   z-index: 100;
   box-shadow: 0 0 5px 10px rgba(0,0,0,0.5);
 }
-.battle-prompt-popup.active{
+.battle-prompt-popup.active {
   display: flex;
 }
-.battle-prompt-popup.enemy{
+.battle-prompt-popup.enemy {
   transform: rotate(180deg);
-   bottom: unset;
+  bottom: unset;
   top: 3vh;
 }
 .battle-prompt-popup > .btns-cont {
@@ -31,256 +31,191 @@
   gap: 7px;
 }
 
-.battle-prompt-popup.block-type-move > .btns-cont > .block-btn{
-display: block;
+.battle-prompt-popup.block-type-move > .btns-cont > .block-btn {
+  display: block;
 }
-.battle-prompt-popup > .btns-cont > .block-btn{
-display: none;
+.battle-prompt-popup > .btns-cont > .block-btn {
+  display: none;
 }
-#popup-msg-cont{
-    
-    position: fixed;
-    width: 100vw;
-    bottom: 40vh;
-    display: none;
-    justify-content: center;
-    align-items: center;
+#popup-msg-cont {
+
+  position: fixed;
+  width: 100vw;
+  bottom: 40vh;
+  display: none;
+  justify-content: center;
+  align-items: center;
 }
-#popup-msg-cont.active{
-    display: flex;
+#popup-msg-cont.active {
+  display: flex;
 
 }
-#popup-msg-cont.enemy-side{
-    transform: rotate(180deg);
-    top: 40vh;
-    bottom: unset;
+#popup-msg-cont.enemy-side {
+  transform: rotate(180deg);
+  top: 40vh;
+  bottom: unset;
 }
 .enemy-controle-cont {
-    height: 47.50%;
+  height: 47.50%;
 }
 .container > .center {
-    background-color: gray;
-    height: 5%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
+  background-color: gray;
+  height: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2px;
 }
+
 #new-wave-btn {
-    padding: 4px 8px;
-    background-color: black;
-    color: white;
-    border-radius: 5px;
-    border: none;
-}
-#very-close-btn{
   padding: 4px 8px;
-    background-color: red;
-    color: white;
-    border-radius: 5px;
-        border: none;
- filter:brightness(20%);
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+  border: none;
 }
-#very-close-btn.active{
- filter:brightness(100%);
+#very-close-btn {
+  padding: 4px 8px;
+  background-color: red;
+  color: white;
+  border-radius: 5px;
+  border: none;
+  filter: brightness(20%);
+}
+#very-close-btn.active {
+  filter: brightness(100%);
 }
 .you-controle-cont {
-    height: 47.50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
+  height: 47.50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+.top-items-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 50%;
+  padding: 0 5px;
+
+}
+.enemy-controle-cont .top-items-wrapper {
+  transform: rotate(180deg);
+
+
+}
+.pokemon-switch-controler {
+  display: flex;
+  width: max-content;
+  height: 100%;
+  justify-content: end;
+  flex-direction: column;
+  align-items: center;
+  gap: 4px;
 }
 
+.pokemon-switch-controler > .pokemon {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: small;
+}
+.pokemon-switch-controler > .pokemon > .pokeball-icon {
+  border-radius: 100%;
+}
+.pokemon-switch-controler > .pokemon.active > .pokeball-icon {
+  border: 3px solid gold;
+}
+.pokemon-switch-controler > .pokemon.disabled > .pokeball-icon {
+  filter: brightness(30%);
+
+}
 .effects-data-column {
-    display: flex;
-    flex-direction: column;
-    width: max-content;
-    gap: 5px;
-    padding: 7px;
-    margin-left: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: end;
+
+  width: calc(100% - 14px);
+  height: 100%;
+  gap: 5px;
+  padding: 7px;
 
 }
-.enemy-controle-cont .effects-data-column {
-    transform: rotate(180deg);
-    margin-left: 0;
-    margin-right: auto;
 
-
-
-}
 .effects-data-column > .effect {
-    padding: 3px 10px;
-    border-radius: 6px;
-    color: white;
-    font-weight: bold;
+  padding: 3px 10px;
+  border-radius: 6px;
+  color: white;
+  font-weight: bold;
 }
 
 .attributes-data-row {
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    gap: 8px;
-    width: calc(100% - 14px);
-    padding: 3px 7px;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  gap: 8px;
+  width: calc(100% - 14px);
+  padding: 3px 7px;
 }
 .enemy-controle-cont .attributes-data-row {
-    transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 .primary-data-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: calc(100% - 10px);
-    padding: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: calc(100% - 10px);
+  padding: 5px;
+}
+.primary-data-nav .retreat {
+  background-color: darkblue;
+  color: white;
+  border: none;
+  border-radius: 7px;
+  font-weight: bold;
+  padding: 3px 6px;
+  font-size: 12px;
 }
 .enemy-controle-cont .primary-data-nav {
-    transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
 .primary-data-nav > .health-progress-bar {
-    border: 1px solid black;
-    width: 200px;
-    height: 25px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+  border: 1px solid black;
+  width: 200px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 .primary-data-nav > .health-progress-bar .inner {
-    width: 100%;
-    height: 100%;
-    background-color: limegreen;
-    position: absolute;
-    right: 0;
-    top: 0;
-    transition: width .3s;
+  width: 100%;
+  height: 100%;
+  background-color: limegreen;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: width .3s;
 }
 .primary-data-nav > .health-progress-bar .health-data {
-    color: black;
-    font-weight: bold;
-    z-index: 1;
+  color: black;
+  font-weight: bold;
+  z-index: 1;
 }
 .enemy-controle-cont .card-container {
-    transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
 .card-container {
-    display: flex;
-    gap: 10px;
-    padding: 4px 8px;
-    overflow-x: auto;
-    width: 100%;
-    box-sizing: border-box;
-    background-color: #eee;
-
-}
-
-.card {
-    background-color: white;
-    min-width: 200px;
-    width: max-content;
-    border-radius: 5px;
-    flex-direction: column;
-    justify-content: space-between;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-    position: relative;
-
-}
-
-.card.disabled {
-    filter: brightness(40%);
-}
-.card.selected {
-border: 5px solid gold;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 4px 10px;
+  width: calc(100% - 20px);
+  background-color: #eee;
+  overflow-x: scroll;
   
-}
-.card:not(.disabled):active {
-    filter: invert(20%);
-
-}
-.card-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 3px;
-    background-color: var(--fire-type-color);
-    color: white;
-    border-radius: 5px 5px 0 0;
-    padding: 6px;
-}
-
-.card-header h3 {
-    font-size: 16px;
-    margin: 0;
-}
-
-.icons {
-    display: flex;
-    gap: 5px;
-}
-
-.icon {
-    width: 20px;
-    height: 20px;
-    background-color: black;
-    border-radius: 3px;
-}
-.card-body {
-    width: 100%;
-    height: 100px;
-    overflow-y: scroll;
-}
-.card-body > * {
-    margin: 5px 3px;
-    font-size: 14px;
-
-}
-.effectiveness > img {
-    width: 15px;
-    height: 15px;
-}
-
-.retreat-cost {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    background-color: #666;
-    color: white;
-    width: 25px;
-    height: 25px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    font-weight: bold;
-    font-size: 14px;
-}
-
-.move-damage-inject-form {
-    width: calc(100vw - 40px);
-    height: calc(20% - 40px);
-    background-color: white;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    display: none;
-    z-index: 100;
-    padding: 20px 0 20px 40px;
-    
-}
-.move-damage-inject-form > button {
-    padding: 4px 10px;
-    margin: 0 4px;
-}
-.enemy-controle-cont > .move-damage-inject-form {
-    top: 0;
-    bottom: unset;
-    transform: rotate(180deg);
-}
-.move-damage-inject-form.active {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    
 }
